--- a/src/components/form/forms/user.entity.profile.form.yml
+++ b/src/components/form/forms/user.entity.profile.form.yml
@@ -22,6 +22,12 @@ fields:
     id: profile_image
     class: [form-control]
     handler: Simp\Default\FileField
+    limit: 1
+    settings:
+      allowed_file_types:
+        - 'image/*'
+      allowed_file_size: '6000000'
+
 
   translations:
     label: Translations
